# docker-gemini-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test-docker.sh
.github/workflows/: docker-publish.yml
config/: config.yaml
scripts/: sample.sh
src/: autonomous_agent.py  config_manager.py  gemini_client.py  health_check.py  task_processor.py
tests/: container-structure-test.yaml  test_gemini_client.py
